--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,11 +16,12 @@ build-backend = "poetry.core.masonry.api"
 [tool.poetry.dependencies]
 python = "^3.8"
 pandas = "1.5.3"
-numpy = "^1.18"
+numpy = "^1.26"
+scipy = "^1.10"
 sympy = "^1.11.1"
 matplotlib = "^3.7.1"
 lmfit = "^1.2.0"
-pytest = { version = ">=7.1.1", optional = true }
+pytest = { version = ">=7.2.0", optional = true }
 pytest-cov = { version = ">=3.0.0", optional = true }
 tox = { version = ">=3.24.5", optional = true }
 tox-conda = { version = ">=0.9.2", optional = true}
